view/frontend/web/js/checkout/src/components/Adyen/DropIn/PaymentMethods/styles.scss
@import '@/styles/global/_breakpoints';

#adyen-dropin-container-stored {
  max-height: 0;
  overflow: hidden;
  transition-duration: 0.5s;
  transition-property: max-height;
  transition-timing-function: ease;

  .adyen-checkout__payment-methods-list-styled {
    display: grid;
    grid-auto-flow: column;
    grid-auto-columns: 75%;
    grid-gap: var(--indent__s);
    grid-template-columns: unset;
    overflow-x: auto;

    &-1 {
      grid-auto-columns: 100%;
    }

    .adyen-checkout__payment-method {
      border: none;
    }

    .adyen-checkout__payment-method__header__title {
      background: var(--adyen-saved-card__background-color);
      border: var(--adyen-saved-card__border-active);
      border-radius: var(--base__border-radius);
      box-shadow: none;
      color: var(--adyen-saved-card__font-color);
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-template-rows: repeat(3, auto);
      margin: 0;
      padding: var(--indent__base);

      &.adyen-checkout__payment-method-disabled {
        border: var(--adyen-saved-card__border);
      }
    }

    .adyen-checkout__payment-method__card-number,
    .adyen-checkout__payment-method__name {
      font-size: var(--font__xs);
      grid-column: 1;
      line-height: 1.5em;
      text-align: left;
    }

    .adyen-checkout__payment-method__expiry-label,
    .adyen-checkout__payment-method__expiry {
      font-size: var(--font__xs);
      grid-column: 2;
      line-height: 1.5em;
      text-align: right;
    }

    .adyen-checkout__payment-method__expiry-label {
      grid-row: 2;
    }

    .adyen-checkout__payment-method__image__wrapper {
      grid-column: 1;
      grid-row: 1;
      height: auto;
      margin: 0 0 var(--indent__base);
      width: 50%;

      img {
        height: auto;
        width: 100%;
      }
    }

    .adyen-checkout__card__exp-date__input--oneclick {
      background-color: transparent;
      border: none;
      color: var(--color__primary-white);
      grid-column: 2;
      height: auto;
      line-height: 1em;
      padding: 0;
      text-align: right;

      &:active {
        box-shadow: none
      }
    }

    .adyen-checkout__payment-method__radio {
      display: none;
    }
  }

  .adyen-checkout__payment-methods-list {
    margin: var(--indent__base) 0 0;

    .adyen-checkout__payment-method {
      background-color: transparent;
      border: none;
      border-radius: 0;
      margin: 0;
      max-height: 0;
      overflow: hidden;
      transition-duration: 0.5s;
      transition-property: max-height;
      transition-timing-function: ease;
    }

    .adyen-checkout__payment-method--selected {
      max-height: 300px;
      transition-delay: 0.5s;
    }

    .adyen-checkout__payment-method__header,
    .adyen-checkout__field {
      display: none;
    }

    .adyen-checkout__payment-method__details {
      display: block;
      padding: 0;
    }

    .adyen-checkout__field--securityCode {
      display: block;
      margin: 0;
      width: 100%;
    }
  }
}

.adyen-dropin-stored-payments {
  label span {
    color: var(--adyen-font-color,#00112c);
    font-size: var(--adyen-font-size,var(--font__m));
    font-weight: var(--adyen-font-weight, var(--font-weight__medium));
  }

  &-active + #adyen-dropin-container-stored {
    max-height: 500px;
    transition-delay: 0.5s;
  }
}

.rvvup-error {
  .adyen-payment__title {
    margin-bottom: var(--indent__base);
  }
}

.adyen-payment {
  &__title {
    display: flex;
    grid-gap: var(--indent__m);
    padding-bottom: var(--indent__s);
    margin-bottom: var(--adyen-payment-title-margin, 0);
    align-items: center;

    .divider-line {
      border-bottom: var(--divider__border);
      margin-left: var(--indent__base);
      width: 40%;
      display: var(--divider-line-display, block);
    }
  }

  &__icon {
    display: var(--adyen-payment-icon__display);

    img {
      width: 24px;
    }
  }

  &__header {
    font-size: var(--payment-page-title-mobile-font, var(--font__m));
    font-weight: var(--payment-page-header-font-weight, var(--font-weight__medium));
    font-family: var(--payment-page-header-font-family, var(--font-family__copy));
    margin-left: var(--payment-page-title-left-margin, var(--indent__base));
  }
}

.gene-checkout-threeds-opened {
  overflow: hidden;

  &:after {
    background: var(--modal-overlay, rgba(0, 0, 0, 0.3));
    bottom: 0;
    content: ' ';
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 200;
  }

  .adyen-checkout__threeds2__challenge {
    bottom: var(--indent__m);
    height: auto;
    left: var(--indent__m);
    position: fixed;
    right: var(--indent__m);
    top: var(--indent__m);
    width: auto;
    z-index: 210;
  }

  .adyen-checkout__iframe--threeDSIframe {
    align-items: center;
    background: var(--color__primary-white);
    display: flex;
    left: 50%;
    justify-content: center;
    max-height: var(--adyen-payment-threeds__max-height);
    max-width: var(--adyen-payment-threeds__max-width);
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
  }
}

@media screen and (min-width: $screen__l) {
  #adyen-dropin-container-stored {
    .adyen-checkout__payment-methods-list-styled {
      grid-auto-columns: 40%;

      &-1,
      &-2 {
        grid-auto-columns: calc(50% - var(--indent__xs));
      }
    }
  }
}

